eggenberg-talos-cluster-1/argocd-apps-configuration/pmhme/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service-preview
  labels:
    app: portfolio-app
    role: preview
spec:
  selector:
    app: portfolio-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      appProtocol: http
  type: ClusterIP
  internalTrafficPolicy: Local
