eggenberg-talos-cluster-1/argocd-apps-configuration/pmhme/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    app: portfolio-app
    role: active
spec:
  selector:
    app: portfolio-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      appProtocol: http
    - name: metrics
      protocol: TCP
      port: 3001
      targetPort: metrics
      appProtocol: prometheus
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
