eggenberg-talos-cluster-1/argocd-apps-configuration/pmhme/base/ingress.yaml
# yamllint disable rule:line-length
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  ingressClassName: cilium
  rules:
    - host: hauptmann.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  name: http
                  # yamllint enable rule:line-length
